--- a/simplyFit/src/components/Cards/Cards.module.css
+++ b/simplyFit/src/components/Cards/Cards.module.css
@@ -3,9 +3,8 @@
     padding: 1rem;
     position: relative;
     width: 20rem;
-    height: 25rem;
+    height: 26rem;
     border-radius: 19px;
-    padding-top: 3rem;
     h1{
         margin: 0%;
     }
@@ -14,7 +13,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: left;
+        justify-content: right;
         align-items: left;
     }
 }
@@ -25,12 +24,12 @@
 }
 
 .rightUpper{
-    position: absolute;
     display: flex;
-    top: 2%;
-    right: 5%;
     gap: 0.5rem;
+    justify-content: end;
     align-items: center;
+    margin: 0%;
+    p{margin: 0%;}
 }
 
 #frequency{
@@ -107,4 +106,11 @@
     font-size: 1.3rem;
     font-weight: 600;
     text-align: center;
+  }
+
+  .inProgress{
+    font-size: 1.3rem;
+    color: white;
+    padding: 0.4rem 1rem;
+    border-radius: 19px;
   }
