--- a/simplyFit/src/pages/Challenges/Challenges.module.css
+++ b/simplyFit/src/pages/Challenges/Challenges.module.css
@@ -22,7 +22,26 @@
         cursor: pointer;
     }
     overflow-x: scroll;
+    scrollbar-width: none;
+
 }
+
+.filter::-webkit-scrollbar{
+    width: 2px;             
+  }
+  
+.filter::-webkit-scrollbar-track{
+    background: #e3e2e2;   
+    border-radius: 19px;    
+  }
+  
+.filter::-webkit-scrollbar-thumb{
+    background-color: rgb(0, 0, 0);
+    border:1px #000000 solid;
+    border-radius: 9px;
+    width: 5px
+    }
+
 #bg{
     background-color: black;
     color: white;
